--- a/readme.org
+++ b/readme.org
@@ -382,7 +382,7 @@ surface appear to be related at all. I think they are, but that might change.
      the moment. Is this possible?
 
      What is an inscription on a tablet? Let's call it a message for lack of a
-     better word. How do we knoe it's a message and not a natural phenomenon? or
+     better word. How do we know it's a message and not a natural phenomenon? or
      an unlikely outcome of random noise? We don't. Intention comes right from
      the start: a message is something intended to be read. Intended to convey
      meaning. The author of a message meant something by it.
